--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "catalyst-core",
-    "version": "0.0.1-beta.6",
+    "version": "0.0.2-canary.1",
     "type": "module",
     "description": "Web framework that provides great performance out of the box",
     "bin": {
@@ -25,39 +25,14 @@
     },
     "license": "MIT",
     "dependencies": {
-        "@babel/cli": "^7.23.0",
-        "@babel/core": "^7.23.2",
-        "@babel/node": "^7.22.19",
-        "@babel/preset-env": "^7.23.2",
-        "@babel/preset-react": "^7.22.15",
-        "@babel/register": "^7.22.15",
-        "@dr.pogodin/css-modules-require-hook": "^4.7.3",
-        "@loadable/babel-plugin": "^5.16.1",
-        "@loadable/component": "^5.15.3",
-        "@loadable/server": "^5.16.1",
-        "@loadable/webpack-plugin": "^5.15.2",
-        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
-        "@svgr/webpack": "^8.1.0",
         "@tata1mg/router": "^0.0.1-beta.2",
         "@vitejs/plugin-react": "^4.4.1",
-        "app-root-path": "^3.1.0",
-        "babel-loader": "^9.1.3",
-        "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
         "body-parser": "^1.20.2",
-        "chokidar": "^3.6.0",
         "compression": "^1.7.4",
         "cookie-parser": "^1.4.6",
-        "css-hot-loader": "^1.4.4",
-        "css-loader": "^6.8.1",
         "express": "^4.18.2",
         "express-static-gzip": "^2.1.7",
-        "file-loader": "^6.2.0",
-        "html-loader": "^4.2.0",
-        "img-loader": "^4.0.0",
-        "mini-css-extract-plugin": "^2.7.6",
-        "module-alias": "^2.2.3",
         "picocolors": "^1.0.0",
-        "postcss-loader": "^7.3.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-helmet-async": "^1.3.0",
@@ -66,21 +41,8 @@
         "react-router-dom": "^6.16.0",
         "redux": "^4.2.1",
         "sanitize-html": "^2.13.1",
-        "sass": "^1.69.5",
-        "sass-loader": "^13.3.2",
-        "sass-resources-loader": "^2.2.5",
         "ua-parser-js": "^1.0.37",
-        "url": "^0.11.3",
-        "url-loader": "^4.1.1",
-        "vite": "^6.3.5",
-        "webpack": "^5.88.2",
-        "webpack-bundle-analyzer": "^4.9.1",
-        "webpack-cli": "^5.1.4",
-        "webpack-dev-server": "^4.15.2",
-        "webpack-merge": "^5.9.0",
-        "webpack-node-externals": "^3.0.0",
-        "winston": "^3.11.0",
-        "winston-daily-rotate-file": "^5.0.0"
+        "vite": "^6.3.5"
     },
     "devDependencies": {
         "@babel/eslint-parser": "^7.19.1",
